fix: removes border from login page card on mobile

--- a/client/src/css/Login.module.scss
+++ b/client/src/css/Login.module.scss
@@ -100,6 +100,8 @@
 	font-size: 1rem;
 	font-weight: bold;
 	line-height: 2rem;
+
+	border: none;
 	
 	width: 80vw;
 	height: 35vh;
